--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: #30098f;
+  background: #34495e;
   display: flex;
   flex-direction: row;
   justify-content: center;
